--- a/src/main.css
+++ b/src/main.css
@@ -8,167 +8,74 @@ and open the template in the editor.
     Author     : spledger
 */
 
-.html5calendar > .inner {
-	position: relative;
-	overflow: hidden;
-}
-
-.html5calendar > .inner > *, 
-.html5calendar > .inner > * > *,
-.html5calendar > .inner > div.view > ul.days > li,
-.html5calendar > .inner > div.view > ul.days > li > *,
-.html5calendar > .inner > div.view > ul.days > li > * > * { 
+.html5calendar *[class*="ht5c-"]{
 	font-size:1em;
 	line-height:1em;
-}
-
-.html5calendar > .inner > ul, .html5calendar > .inner > ul > li,
-.html5calendar > .inner > div.view > ul.days > li > ul{
 	margin:0;
 	padding:0;
-	display:block;
 }
 
-.html5calendar > .inner > ul,
-.html5calendar > .inner > div.view > ul,
-.html5calendar > .inner > div.view > ul.days > li >ul {
+.html5calendar > .ht5c-inner {
+	position: relative;
+}
+
+.html5calendar > ul[data-calendar-events] {
+	display: none;
+}
+
+.html5calendar ul[class*="ht5c-"]{
+	display:block;
 	list-style: none;
-	left:0%;
-}
-
-.html5calendar > .inner > ul[data-calendar-eventData]{
-	display:none;
-}
-
-.html5calendar > .inner.agenda > div.view {
-	position: absolute;
-	top: 0;
-	bottom: 0;
-	left: 3rem;
-	right: 0;
-	overflow: hidden;
-	padding: 0;
-	margin: 0;
-	border-top:1px solid #CCC;
-	border-right:1px solid #CCC;
-}
-
-.html5calendar > .inner.agenda > div.view > ul.days {
-	position:relative;
-	top:0;
-	left:0;
-	right:0;
 	width:100%;
-	height:100%;
-	margin:0;
-	padding:0;
-	-webkit-transition: left 1.25s;
-	transition: left 1.25s;
 }
 
-.html5calendar > .inner.agenda > div.view > ul.days > li {
-	position: absolute;
-	top: 0;
-	bottom: 2px;
-	border-left:1px solid #CCC;
-}
-
-.html5calendar > .inner.agenda > div.view > ul.days > li > div.dayLabel {
-	padding:0;
+.html5calendar ul[class*="ht5c-"] > li {
 	display:block;
-	text-align:center;
-	font-weight: 700;
-	line-height:1rem;
+}
+
+.html5calendar .ht5c-event > *,
+.html5calendar .ht5c-hour > *
+ {
 	font-size:1rem;
-	height:1em;
-} 
-
-.html5calendar > .inner.agenda > div.view > ul.days > li > ul {
-	position:absolute;	
-	left:0;
-	right:0;
-	top:1rem;
-	bottom:0;
-}
-
-.html5calendar > .inner.agenda > div.view > ul.days > li > ul > li {
-	padding: 0px 2px;
-	overflow:hidden;
-	position:absolute;
-	margin:0;
-}
-
-
-.html5calendar > .inner.agenda > div.view > ul.days > li > ul > li > * {
 	line-height:1rem;
-	font-size:1rem;
 }
 
-.html5calendar > .inner.agenda.days-1 > ul.cols > li,
-.html5calendar > .inner.agenda.days-1 > div.view > ul.days > li {
+.html5calendar .ht5c-week {
 	width:100%;
 }
 
-.html5calendar > .inner.agenda.days-2 > ul.cols > li,
-.html5calendar > .inner.agenda.days-2 > div.view > ul.days > li {
-	width:50%;
+.html5calendar .ht5c-week > li {
+	float:left;
 }
 
-.html5calendar > .inner.agenda.days-3 > ul.cols > li,
-.html5calendar > .inner.agenda.days-3 > div.view > ul.days > li {
-	width:33.3333%;
+.html5calendar .ht5c-week > li > time {
+	display:block;
+	font-size:1rem;
 }
 
-.html5calendar > .inner.agenda.days-4 > ul.cols > li,
-.html5calendar > .inner.agenda.days-4 > div.view > ul.days > li {
-	width:25%;
-}
-
-.html5calendar > .inner.agenda.days-5 > ul.cols > li,
-.html5calendar > .inner.agenda.days-5 > div.view > ul.days > li {
-	width:20%;
-}
-
-.html5calendar > .inner.agenda.days-6 > ul.cols > li,
-.html5calendar > .inner.agenda.days-6 > div.view > ul.days > li {
-	width:16.6666%;
-}
-
-.html5calendar > .inner.agenda.days-7 > ul.cols > li,
-.html5calendar > .inner.agenda.days-7 > div.view > ul.days > li {
-	width:14.2857142875%;
-}
-
-.html5calendar > .inner.agenda > ul.rows {
-	position:absolute;
-	border-top:1px solid #CCC;
+.html5calendar .ht5c-hours {
+	position:relative;
+	left:0;
+	right:1px;
 	border-left:1px solid #CCC;
-	top:1rem;
-	left:0;
-	right:0;
-	bottom:2px;
 }
 
-.html5calendar > .inner.agenda > ul.rows > li {
-	position:absolute;
-	left:0;
-	right:0;
-}
-
-.html5calendar > .inner.agenda > ul.rows > li.r {
+.html5calendar .ht5c-hours > li {
 	border-bottom:1px solid #CCC;
+	margin-bottom:-1px;
+	margin-right:1px;
 }
 
-.html5calendar > .inner.agenda > ul.rows > li.r:nth-of-type(odd) {
+.html5calendar .ht5c-hours > li:nth-of-type(even) {
 	border-bottom:1px dotted #CCC;
 }
 
-.html5calendar > .inner.agenda > ul.rows > li.r >small {
-	padding-top: 2px;
+
+.html5calendar .ht5c-hours > li > time {
 	display: block;
+	padding-top: 2px;
 	line-height: 1em;
 	font-size: 0.6rem;
-	height: 100%;
 	width: 2.8rem;
 	text-align: right;
 }
