--- a/docs/partials/api/jQuery.html5calendar.html
+++ b/docs/partials/api/jQuery.html5calendar.html
@@ -4,12 +4,6 @@
 </div>
 </h1>
 <div><h2 id="usage">Usage</h2>
-<div class="usage">as attribute<pre class="prettyprint linenums">&lt;textarea
-
-The HTML5Calendar widget, using the [jQuery UI Widget Factory](http: //api.jqueryui.com/jQuery.widget/) html5calendar&gt;
-   ...
-&lt;/textarea
-
-The HTML5Calendar widget, using the [jQuery UI Widget Factory](http: //api.jqueryui.com/jQuery.widget/)&gt;</pre>
+<div class="usage"><pre class="prettyprint linenums">html5calendar();</pre>
 </div>
 </div>
