--- a/docs/partials/developer/HT5CEvent.html
+++ b/docs/partials/developer/HT5CEvent.html
@@ -1,8 +1,5 @@
-<h1><code ng:non-bindable="">HT5CEvent</code>
+<h1><code ng:non-bindable=""></code>
 <div><span class="hint"></span>
 </div>
 </h1>
-<div><h2 id="description">Description</h2>
-<div class="description"><div class="ht5cevent-page"><p>An Event wrapper for HTML5Calendar</p>
-</div></div>
-</div>
+<div></div>
